# ComfyUI-lance-quant

./: .comfyignore  .gitignore  README.md  __init__.py  lance_worker.py  nodes.py  pyproject.toml
.github/workflows/: publish_registry.yml
example_workflows/: lance_t2i.json  lance_x2t_image.json
scripts/: awq_apply.py  awq_apply_5bit.py  awq_calibrate.py  awq_calibrate_single.py  awq_calibrate_text_only.py  awq_merge_stats.py  awq_quantize.py  bootstrap_a100.sh  convert_to_coreml.py  eval_compare.py  eval_perplexity.py  extract_und_to_qwen.py  nvfp4_apply.py  palettize_weights_coreml.py  quant_runtime.py  quantize_int4_minmax.py  run_baseline.py  run_quant_eval.py
